# alphagwas

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  app.py  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  run_pipeline.py  setup_study.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
config/: cardiovascular_config.yaml  config.yaml  example_config.yaml
data/input/: example_gwas_sumstats.tsv  sample_gwas.tsv  sample_truthset.tsv
deploy/: README.md
deploy/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
deploy/terraform/bootstrap/: main.tf
docs/: contributing.md  index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: api.md  colocalization.md  multiphenotype.md  pipeline.md
migrations/: README  env.py
migrations/versions/: 001_initial_schema.py
notebooks/: 01_quickstart_tutorial.ipynb
scripts/: __init__.py  alphagenome_predict.py  annotate.py  api.py  auth.py  cli.py  colocalization.py  database.py  database_models.py  enrichment.py  extract_variants.py  finemapping.py  get_ld_proxies.py  job_store.py  liftover.py  locuszoom.py  mendelian_randomization.py  multiphenotype.py  observability.py  prs.py  queue.py  report.py  score_variants.py  utils.py  validate_truthset.py  visualize.py  visualize_interactive.py
tests/: __init__.py  conftest.py  test_alphagenome_predict.py  test_extract_variants.py  test_score_variants.py  test_utils.py  test_validate_truthset.py
